# MARROW

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
db/: marrow.db-shm  schema.sql
eidos/: agent.py  engine.py
eidos/collector/: accessibility.py  audio.py  input.py  screen.py  writer.py
eidos/models/: actions.py  loss.py  text.py  tokenizer.py  world.py
eidos/trainer/: dataset.py  sequence_dataset.py  train_tokenizer.py  train_world.py
